@@ -15,7 +15,7 @@ install: build
 	dh_clean -k
 	dh_install autopartition bin
 	dh_install perform_recipe bin
-	dh_install recipes.sh lib/partman
+	dh_install auto-shared.sh recipes.sh lib/partman
 	if [ -d recipes-$(ARCH) ]; then \
 		debian/install-rc recipes-$(ARCH); \
 	else \
